k8s-resources-aws/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
      - name: checkout
        image: CM_IMAGE_LOC:latest
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
          initialDelaySeconds: 90
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          timeoutSeconds: 5
          initialDelaySeconds: 90
          periodSeconds: 3
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
