k8s-resources-aws/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: checkout-svc
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: checkout
