k8s-resources-aws/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: checkout-svc
                port:
                  number: 8080
          - path: /health
            pathType: Exact
            backend:
              service:
                name: checkout-svc
                port:
                  number: 8080
